[package]
name = "rusty-node-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
scraper = "0.18.1"
